# vcc-case-study-optimizinf-CI-CD

./: .pre-commit-config.yaml  Dokerfile  README.md  app.py  app.yaml  makefile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
